# XenRedux

./: .gitattributes  .gitignore  .gitmodules  BootstrapTests.bat  BootstrapTests.sh  CMakeLists.txt  GenerateShaders.bat  GenerateShaders.sh  README.md  genShaderHeaders.py  genTestData.py  vcpkg.json
Common/: ArcballCamera.cpp  ArcballCamera.hpp  BlinnPhongMaterial.cpp  BlinnPhongMaterial.hpp  Camera.hpp  CameraState.hpp  Clock.cpp  Clock.hpp  Component.hpp  ComponentManager.hpp  Context.cpp  Context.hpp  DirectionalLight.cpp  DirectionalLight.hpp  EventSystem.hpp  Game.cpp  Game.hpp  GameObject.hpp  GameState.cpp  GameState.hpp  IBLPreprocessor.cpp  IBLPreprocessor.hpp  Light.cpp  Light.hpp  LightingState.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  PBRMaterial.cpp  PBRMaterial.hpp  Panic.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  PointLight.cpp  PointLight.hpp  RenderComponent.cpp  RenderComponent.hpp  (+18 more)
Modules/Data/: BinaryData.cpp  BinaryData.hpp  CompressedData.cpp  CompressedData.hpp  Compression.cpp  Compression.hpp  Data.Tests.cpp  Data.cmake  Data.cpp  Data.hpp
Modules/Filesystem/: Filesystem.Tests.cpp  Filesystem.cmake  Filesystem.cpp  Filesystem.hpp
Modules/Graphics/: BigTriangle.cpp  Buffer.hpp  CommandQueue.cpp  CommandQueue.hpp  Commands.hpp  ComputeShader.cpp  ComputeShader.hpp  DebugOpenGL.hpp  DebugUI.cpp  DebugUI.hpp  Graphics.Tests.cpp  Graphics.cmake  Pipeline.cpp  Pipeline.hpp  PostProcessEffect.hpp  PostProcessQuad.cpp  PostProcessQuad.hpp  Primitives.cpp  Primitives.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.hpp  ScopedBatchQueue.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexAttribute.hpp
Modules/Graphics/Effects/: AntiAliasing.cpp  AntiAliasing.hpp  GaussianBlur.cpp  GaussianBlur.hpp  Tonemapper.cpp  Tonemapper.hpp
Modules/Graphics/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLMaterial.cpp  OpenGLMaterial.hpp  OpenGLPipelineState.cpp  OpenGLPipelineState.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp
Modules/Graphics/Shaders/Headers/: BlinnPhong_FS.h  BlinnPhong_VS.h  Quad_FS.h  Quad_VS.h
Modules/Graphics/Shaders/Include/: BRDF_LUT_CS.h  BlinnPhong_FS.h  BlinnPhong_VS.h  EquirectToCubemap_FS.h  EquirectToCubemap_VS.h  FXAA_CS.h  Gaussian_CS.h  IrradianceMap_CS.h  IrradianceMap_FS.h  IrradianceMap_VS.h  PBR_FS.h  PBR_VS.h  PrefilterMap_CS.h  PrefilteredMap_FS.h  PrefilteredMap_VS.h  Quad_FS.h  Quad_VS.h  Skybox_FS.h  Skybox_VS.h  Tonemapper_CS.h  Unlit_FS.h  Unlit_VS.h
Modules/Graphics/Shaders/Source/: BRDF_LUT_CS.glsl  BlinnPhong_FS.glsl  BlinnPhong_VS.glsl  EquirectToCubemap_FS.glsl  EquirectToCubemap_VS.glsl  FXAA_CS.glsl  Gaussian_CS.glsl  IrradianceMap_CS.glsl  IrradianceMap_FS.glsl  PBR_FS.glsl  PBR_VS.glsl  PrefilterMap_CS.glsl  PrefilteredMap_FS.glsl  PrefilteredMap_VS.glsl  Quad_FS.glsl  Quad_VS.glsl  Skybox_FS.glsl  Skybox_VS.glsl  Tonemapper_CS.glsl  Unlit_FS.glsl  Unlit_VS.glsl
Modules/Input/: Input.cmake  Input.hpp  InputManager.cpp  InputManager.hpp
Modules/Math/: Math.cmake  Random.inl
Modules/Memory/: ArenaAllocator.cpp  ArenaAllocator.hpp  GpuBuffer.cpp  GpuBuffer.hpp  Memory.Tests.cpp  Memory.cmake  PoolAllocator.cpp  PoolAllocator.hpp  SharedPtr.hpp  UniquePtr.hpp  WeakPtr.hpp
Modules/UI/: Layout.cpp  Layout.hpp  RenderContext.cpp  RenderContext.hpp  Style.hpp  UI.cmake  UI.hpp  UIBuilder.cpp  UIBuilder.hpp  UIElement.cpp  UIElement.hpp
Modules/Window/: Window.Tests.cpp  Window.cmake  Window.cpp  Window.hpp  WindowEvents.hpp
Modules/Window/Win32/: Win32Window.cpp  Win32Window.hpp
Resources/TestData/: README.md
SpaceGame/: CMakeLists.txt  main.cpp
SpaceGame/Data/: GroundPlane.glb  Sky.hdr
Tests/: CMakeLists.txt  Tests.Rendering.cpp
Tests/Data/: ShaderBall.glb
Tools/IBLGen/: CMakeLists.txt  README.md  main.cpp
Tools/IBLGen/Data/: test_sky.hdr
